Clever print statement

--- a/Noebook_Step2.ipynb
+++ b/Noebook_Step2.ipynb
@@ -266,6 +266,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PcXxaEH6oOee",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pd.set_option('display.max_columns', 999)\n",
+        "pd.set_option('display.max_row', 1000)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -287,7 +301,7 @@
         "outputId": "e63485a9-fbe3-4f4f-89c1-8a7aea1cd88d"
       },
       "source": [
-        "pd.set_option('display.max_columns', 999)\n",
+        "\n",
         "data=pd.read_csv('updated_ski_data.csv')\n",
         "pprint.pprint(data.head())"
       ],
@@ -789,45 +803,44 @@
           "base_uri": "https://localhost:8080/",
           "height": 493
         },
-        "outputId": "ba934fbe-7dee-49de-b9d1-0ba33f5d9fde"
+        "outputId": "73abb502-d227-4491-f0e9-51a4b1642533"
       },
       "source": [
-        "\n",
-        "data.apply(lambda a: print(a.name+\" \"+str(a.nunique())))\n",
-        "print()\n"
+        "data.apply(lambda a: print(\"%s: %d\" %(a.name,a.nunique())))\n",
+        "print()"
       ],
-      "execution_count": 50,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Name 329\n",
-            "Region 38\n",
-            "state 35\n",
-            "summit_elev 266\n",
-            "vertical_drop 193\n",
-            "base_elev 244\n",
-            "trams 5\n",
-            "fastEight 2\n",
-            "fastSixes 7\n",
-            "fastQuads 14\n",
-            "quad 7\n",
-            "triple 9\n",
-            "double 10\n",
-            "surface 12\n",
-            "total_chairs 31\n",
-            "Runs 110\n",
-            "TerrainParks 11\n",
-            "LongestRun_mi 42\n",
-            "SkiableTerrain_ac 193\n",
-            "Snow Making_ac 143\n",
-            "daysOpenLastYear 111\n",
-            "yearsOpen 72\n",
-            "averageSnowfall 107\n",
-            "AdultWeekday 83\n",
-            "AdultWeekend 81\n",
-            "projectedDaysOpen 90\n",
-            "NightSkiing_ac 78\n",
+            "Name: 329\n",
+            "Region: 38\n",
+            "state: 35\n",
+            "summit_elev: 266\n",
+            "vertical_drop: 193\n",
+            "base_elev: 244\n",
+            "trams: 5\n",
+            "fastEight: 2\n",
+            "fastSixes: 7\n",
+            "fastQuads: 14\n",
+            "quad: 7\n",
+            "triple: 9\n",
+            "double: 10\n",
+            "surface: 12\n",
+            "total_chairs: 31\n",
+            "Runs: 110\n",
+            "TerrainParks: 11\n",
+            "LongestRun_mi: 42\n",
+            "SkiableTerrain_ac: 193\n",
+            "Snow Making_ac: 143\n",
+            "daysOpenLastYear: 111\n",
+            "yearsOpen: 72\n",
+            "averageSnowfall: 107\n",
+            "AdultWeekday: 83\n",
+            "AdultWeekend: 81\n",
+            "projectedDaysOpen: 90\n",
+            "NightSkiing_ac: 78\n",
             "\n"
           ],
           "name": "stdout"
@@ -853,44 +866,49 @@
           "base_uri": "https://localhost:8080/",
           "height": 493
         },
-        "outputId": "250fc3e8-92db-4ca6-c3a1-06c226be33d3"
+        "outputId": "c785bb8d-638b-4752-918f-27e4d7dee564"
       },
       "source": [
-        "data.apply(lambda a: print(a.name+\" \"+str(round(a.nunique()/a.count()*100,2))+\"%\"))\n",
-        "print()"
+        "def rounded_result(a):\n",
+        "  return str(round(a.nunique()/a.count()*100,2))+\"%\"\n",
+        "\n",
+        "data.apply(lambda a: print(\"%s: %s\" % (a.name,rounded_result(a))))\n",
+        "\n",
+        "print()\n",
+        "\n"
       ],
-      "execution_count": 52,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Name 99.7%\n",
-            "Region 11.52%\n",
-            "state 10.61%\n",
-            "summit_elev 80.61%\n",
-            "vertical_drop 58.48%\n",
-            "base_elev 73.94%\n",
-            "trams 1.52%\n",
-            "fastEight 1.22%\n",
-            "fastSixes 2.12%\n",
-            "fastQuads 4.24%\n",
-            "quad 2.12%\n",
-            "triple 2.73%\n",
-            "double 3.03%\n",
-            "surface 3.64%\n",
-            "total_chairs 9.39%\n",
-            "Runs 33.74%\n",
-            "TerrainParks 3.94%\n",
-            "LongestRun_mi 12.92%\n",
-            "SkiableTerrain_ac 59.02%\n",
-            "Snow Making_ac 50.35%\n",
-            "daysOpenLastYear 39.78%\n",
-            "yearsOpen 21.88%\n",
-            "averageSnowfall 33.86%\n",
-            "AdultWeekday 30.07%\n",
-            "AdultWeekend 29.03%\n",
-            "projectedDaysOpen 31.8%\n",
-            "NightSkiing_ac 41.71%\n",
+            "Name: 99.7%\n",
+            "Region: 11.52%\n",
+            "state: 10.61%\n",
+            "summit_elev: 80.61%\n",
+            "vertical_drop: 58.48%\n",
+            "base_elev: 73.94%\n",
+            "trams: 1.52%\n",
+            "fastEight: 1.22%\n",
+            "fastSixes: 2.12%\n",
+            "fastQuads: 4.24%\n",
+            "quad: 2.12%\n",
+            "triple: 2.73%\n",
+            "double: 3.03%\n",
+            "surface: 3.64%\n",
+            "total_chairs: 9.39%\n",
+            "Runs: 33.74%\n",
+            "TerrainParks: 3.94%\n",
+            "LongestRun_mi: 12.92%\n",
+            "SkiableTerrain_ac: 59.02%\n",
+            "Snow Making_ac: 50.35%\n",
+            "daysOpenLastYear: 39.78%\n",
+            "yearsOpen: 21.88%\n",
+            "averageSnowfall: 33.86%\n",
+            "AdultWeekday: 30.07%\n",
+            "AdultWeekend: 29.03%\n",
+            "projectedDaysOpen: 31.8%\n",
+            "NightSkiing_ac: 41.71%\n",
             "\n"
           ],
           "name": "stdout"
@@ -912,13 +930,49 @@
       "metadata": {
         "colab_type": "code",
         "id": "BMorHSRuIdnI",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "9c7726a2-bcde-44ea-a496-9032a5e02315"
       },
       "source": [
-        ""
+        "[print(data[item].unique()) for item in ['Region','state']]"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Alaska' 'Arizona' 'Northern California' 'Sierra Nevada' 'Colorado'\n",
+            " 'Connecticut' 'Idaho' 'Illinois' 'Indiana' 'Iowa' 'Maine' 'Maryland'\n",
+            " 'Massachusetts' 'Michigan' 'Minnesota' 'Missouri' 'Montana' 'Nevada'\n",
+            " 'New Hampshire' 'New Jersey' 'New Mexico' 'New York' 'North Carolina'\n",
+            " 'Ohio' 'Oregon' 'Mt. Hood' 'Pennsylvania' 'Rhode Island' 'South Dakota'\n",
+            " 'Tennessee' 'Salt Lake City' 'Utah' 'Vermont' 'Virginia' 'Washington'\n",
+            " 'West Virginia' 'Wisconsin' 'Wyoming']\n",
+            "['Alaska' 'Arizona' 'California' 'Colorado' 'Connecticut' 'Idaho'\n",
+            " 'Illinois' 'Indiana' 'Iowa' 'Maine' 'Maryland' 'Massachusetts' 'Michigan'\n",
+            " 'Minnesota' 'Missouri' 'Montana' 'Nevada' 'New Hampshire' 'New Jersey'\n",
+            " 'New Mexico' 'New York' 'North Carolina' 'Ohio' 'Oregon' 'Pennsylvania'\n",
+            " 'Rhode Island' 'South Dakota' 'Tennessee' 'Utah' 'Vermont' 'Virginia'\n",
+            " 'Washington' 'West Virginia' 'Wisconsin' 'Wyoming']\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[None, None]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "markdown",
